#5 Anzeige und Laden aus der Datenbank
Implementierung in Textboxen funktioniert noch nicht

--- a/WindowsFormsTelefonbuchNPoco/App.config
+++ b/WindowsFormsTelefonbuchNPoco/App.config
@@ -11,4 +11,9 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <connectionStrings>
+    <add name="mariadb" connectionString="Server=localhost;Uid=root;Pwd=pa$$w0rd;Database=telefonbuch;Port=3306"
+      providerName="MySql.Data.MySqlClient" />    
+  </connectionStrings>
+
 </configuration>
