--- a/WindowsFormsTelefonbuchNPoco/WindowsFormsTelefonbuchNPoco.csproj
+++ b/WindowsFormsTelefonbuchNPoco/WindowsFormsTelefonbuchNPoco.csproj
@@ -41,6 +41,7 @@
       <HintPath>..\packages\NPoco.5.0.1\lib\net461\NPoco.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Linq.Async, Version=5.0.0.0, Culture=neutral, PublicKeyToken=94bc3704cddfc263, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Linq.Async.5.0.0\lib\net461\System.Linq.Async.dll</HintPath>
